Finish all the TPs (almost)